# syllogism-solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ProofSolver.h  Utils.h
src/: ProofSolver.cpp  ProofSolver.h  Rules.cpp  Rules.h  Utils.h  main.cpp
tests/: ProofSolverTests.cpp
